Give the example a title.

--- a/examples/index.html
+++ b/examples/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>HTML Document</title>
+    <title>Orderly Example</title>
     <link href='style.css' rel='stylesheet' type='text/css' />
     <meta charset='utf-8' />
   </head>
