Update directory structure and build system.

--- a/examples/index.html
+++ b/examples/index.html
@@ -72,7 +72,7 @@
     </div>
 
     <script src='http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js'></script>
-    <script src='../src/orderly.js'></script>
+    <script src='../dist/jquery.orderly.min.js'></script>
 
     <!--
     <script>
