--- a/examples/index.html
+++ b/examples/index.html
@@ -72,7 +72,7 @@
     </div>
 
     <script src='http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js'></script>
-    <script src='../dist/jquery.orderly.min.js'></script>
+    <script src='../src/jquery.orderly.js'></script>
 
     <!--
     <script>
@@ -85,7 +85,7 @@
     -->
 
     <script>
-      $( '.box' ).orderly( { children: true } );
+      $( '.box' ).orderly( { method: 'children' } );
     </script>
 
   </body>
