IE 8 support for real! (maybe)

--- a/examples/index.html
+++ b/examples/index.html
@@ -11,62 +11,62 @@
 
       <!-- 1 -->
 
-      <div class='box'>
-        <div><span>1</span></div>
-        <div></div>
-        <div></div>
+      <div class='box aa'>
+        <div class='aaa'><span>1</span></div>
+        <div class='bbb'></div>
+        <div class='ccc'></div>
       </div>
 
-      <div class='box'>
-        <div><span>2</span></div>
-        <div></div>
-        <div></div>
+      <div class='box bb'>
+        <div class='aaa'><span>2</span></div>
+        <div class='bbb'></div>
+        <div class='ccc'></div>
       </div>
 
-      <div class='box'>
-        <div><span>3</span></div>
-        <div></div>
-        <div></div>
+      <div class='box cc'>
+        <div class='aaa'><span>2</span></div>
+        <div class='bbb'></div>
+        <div class='ccc'></div>
       </div>
 
       <!-- 2 -->
 
-      <div class='box'>
-        <div><span>1</span></div>
-        <div></div>
-        <div></div>
+      <div class='box aa'>
+        <div class='aaa'><span>1</span></div>
+        <div class='bbb'></div>
+        <div class='ccc'></div>
       </div>
 
-      <div class='box'>
-        <div><span>2</span></div>
-        <div></div>
-        <div></div>
+      <div class='box bb'>
+        <div class='aaa'><span>2</span></div>
+        <div class='bbb'></div>
+        <div class='ccc'></div>
       </div>
 
-      <div class='box'>
-        <div><span>3</span></div>
-        <div></div>
-        <div></div>
+      <div class='box cc'>
+        <div class='aaa'><span>2</span></div>
+        <div class='bbb'></div>
+        <div class='ccc'></div>
       </div>
 
       <!-- 3 -->
 
-      <div class='box'>
-        <div><span>1</span></div>
-        <div></div>
-        <div></div>
+      <div class='box aa'>
+        <div class='aaa'><span>1</span></div>
+        <div class='bbb'></div>
+        <div class='ccc'></div>
       </div>
 
-      <div class='box'>
-        <div><span>2</span></div>
-        <div></div>
-        <div></div>
+      <div class='box bb'>
+        <div class='aaa'><span>2</span></div>
+        <div class='bbb'></div>
+        <div class='ccc'></div>
       </div>
 
-      <div class='box'>
-        <div><span>3</span></div>
-        <div></div>
-        <div></div>
+      <div class='box cc'>
+        <div class='aaa'><span>2</span></div>
+        <div class='bbb'></div>
+        <div class='ccc'></div>
       </div>
 
     </div>
