Adjust example for broken case, elements spanning mutliple sections.

--- a/examples/index.html
+++ b/examples/index.html
@@ -9,6 +9,8 @@
 
     <div class='container'>
 
+      <h1>Section 1</h1>
+
       <!-- 1 -->
 
       <div class='box aa'>
@@ -37,6 +39,20 @@
         <div class='ccc'></div>
       </div>
 
+    </div>
+
+    <div class='container'>
+
+      <h1>Section 2</h1>
+
+      <!-- 1 -->
+
+      <div class='box aa'>
+        <div class='aaa'><span>1</span></div>
+        <div class='bbb'></div>
+        <div class='ccc'></div>
+      </div>
+
       <div class='box bb'>
         <div class='aaa'><span>2</span></div>
         <div class='bbb'></div>
@@ -49,7 +65,7 @@
         <div class='ccc'></div>
       </div>
 
-      <!-- 3 -->
+      <!-- 2 -->
 
       <div class='box aa'>
         <div class='aaa'><span>1</span></div>
