--- a/examples/index.html
+++ b/examples/index.html
@@ -121,6 +121,52 @@
 
     </div>
 
+    <div class='container'>
+
+      <h1>Section 4</h1>
+
+      <!-- 1 -->
+
+      <div class='box aa'>
+        <div class='aaa'><span>1</span></div>
+        <div class='bbb'></div>
+        <div class='ccc'></div>
+      </div>
+
+      <div class='box bb hide'>
+        <div class='aaa'><span>2</span></div>
+        <div class='bbb'></div>
+        <div class='ccc'></div>
+      </div>
+
+      <div class='box cc'> <!-- testing display: none -->
+        <div class='aaa'><span>3</span></div>
+        <div class='bbb'></div>
+        <div class='ccc'></div>
+      </div>
+
+      <!-- 2 -->
+
+      <div class='box aa'>
+        <div class='aaa'><span>1</span></div>
+        <div class='bbb'></div>
+        <div class='ccc'></div>
+      </div>
+
+      <div class='box bb'>
+        <div class='aaa'><span>2</span></div>
+        <div class='bbb'></div>
+        <div class='ccc'></div>
+      </div>
+
+      <div class='box cc'>
+        <div class='aaa'><span>3</span></div>
+        <div class='bbb'></div>
+        <div class='ccc'></div>
+      </div>
+
+    </div>
+
     <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.0/jquery.min.js'></script>
     <script src='../src/jquery.orderly.js'></script>
 
